--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,29 @@
     </header>
 
     <div class="wrapper">
+        <div class="container bg-white shadow form-container">
+            <h2>Multi Clouds</h2>
+            <div class="icons">
+                <a href="https://www.dropbox.com/id/login" target="_blank">
+                    <button class="dropbox-button"></button>
+                </a>
+                <a href="https://drive.google.com/drive/my-drive" target="_blank">
+                    <button class="drive-button"></button>
+                </a>
+                <a href="https://my.pcloud.com/" target="_blank">
+                    <button class="pcloud-button"></button>
+                </a>
+                <a href="https://www.idrive.com/idrive/login/loginForm" target="_blank">
+                    <button class="iDrive-button"></button>
+                </a>
+                <a href="https://onedrive.live.com/about/id-id/signin/" target="_blank">
+                    <button class="onedrive-button"></button>
+                </a>
+                <a href="https://cp.sync.com/" target="_blank">
+                    <button class="sync-button"></button>
+                </a>
+            </div>
+        </div>
         <button class="show-input-form btn-normal">Tambah Tautan</button>
 
         <div class="container bg-white shadow form-container" id="add-note" hidden>
